<!--
  ~ Created by Dmitry Lipski on 20.01.21 16:30
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 20.01.21 15:16
  -->

<resources>
    <string name="app_name">Manchester United</string>
    <string name="title_news">News</string>
    <string name="title_standings">Standings</string>
    <string name="title_fixtures">Fixtures</string>
    <string name="title_squad">Squad</string>
    <string name="content_description_team_logo">Team logo</string>
    <string name="label_standings_points">Pts</string>
    <string name="label_standings_goal_difference">GD</string>
    <string name="label_standings_games_played">P</string>
    <string name="label_standings_team">Team</string>
    <string name="label_standings_position">Pos</string>
    <string name="channel_name">News channel</string>
    <string name="channel_description">Channel for getting notifications about last news</string>
</resources>