<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Dmitry Lipski on 19.01.21 16:24
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 19.01.21 10:42
  -->

<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/news"
        android:icon="@drawable/ic_news_48dp"
        android:title="@string/title_news" />

    <item
        android:id="@+id/standings"
        android:icon="@drawable/ic_standings_48dp"
        android:title="@string/title_standings" />

    <item
        android:id="@+id/fixtures"
        android:icon="@drawable/ic_fixtures_48dp"
        android:title="@string/title_fixtures" />

    <item
        android:id="@+id/squad"
        android:icon="@drawable/ic_squad_48dp"
        android:title="@string/title_squad" />

</menu>