<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Created by Dmitry Lipski on 13.01.21 10:45
  ~ Copyright (c) 2021 . All rights reserved.
  ~ Last modified 13.01.21 9:11
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.standings.StandingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/csl_standings_header_row"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_standings_header_rank"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_rank"
            app:layout_constraintStart_toStartOf="@id/gl_rank"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/StandingsTextStyle"
            android:textAppearance="@style/ManUtd.TextAppearance.StandingsPosition"
            android:text="@string/label_standings_position" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_rank"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.05" />

        <TextView
            android:id="@+id/tv_standings_header_team"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/gl_team"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/StandingsTextStyle"
            android:textAppearance="@style/ManUtd.TextAppearance.StandingsTeam"
            android:text="@string/label_standings_team" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_team"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.12" />

        <TextView
            android:id="@+id/tv_standings_header_games"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_games"
            app:layout_constraintStart_toStartOf="@id/gl_games"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/StandingsTextStyle"
            android:textAppearance="@style/ManUtd.TextAppearance.Standings"
            android:text="@string/label_standings_games_played" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_games"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.75" />

        <TextView
            android:id="@+id/tv_standings_header_goal_difference"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_gd"
            app:layout_constraintStart_toStartOf="@id/gl_gd"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/StandingsTextStyle"
            android:textAppearance="@style/ManUtd.TextAppearance.Standings"
            android:text="@string/label_standings_goal_difference" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_gd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.85" />

        <TextView
            android:id="@+id/tv_standings_header_points"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@id/gl_points"
            app:layout_constraintStart_toStartOf="@id/gl_points"
            app:layout_constraintTop_toTopOf="parent"
            style="@style/StandingsTextStyle"
            android:textAppearance="@style/ManUtd.TextAppearance.Standings"
            android:text="@string/label_standings_points" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_points"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.95" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_standings_teams_list"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:visibility="gone"
        tools:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/csl_standings_header_row" />

    <ProgressBar
        android:id="@+id/pb_standings"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>